--- a/settings.json
+++ b/settings.json
@@ -2,9 +2,9 @@
     "dicom": {
         "dicom_data_directory": "C:/tmp/map app data",
         "arc_check_resolution": 1,
-        "surface_recon_method": "Zero-Crossing",
-        "pixel_spacing_x": 5.0,
-        "pixel_spacing_y": 5.0,
+        "surface_recon_method": "Marching Cubes",
+        "pixel_spacing_x": 2.0,
+        "pixel_spacing_y": 2.0,
         "contours_to_keep": "CCW"
     },
     "maprt": {
